--- a/app/src/main/res/layout/fragment_jual.xml
+++ b/app/src/main/res/layout/fragment_jual.xml
@@ -1,30 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Form Jual Produk"
-        android:textSize="20sp"
-        android:paddingBottom="16dp"/>
-
     <EditText
+        android:id="@+id/input_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nama Produk"/>
+        android:hint="Nama Produk" />
 
     <EditText
+        android:id="@+id/input_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Harga Produk"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:hint="Harga Produk" />
 
     <Button
+        android:id="@+id/btn_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Jual Sekarang"/>
+        android:text="Tambah Produk"
+        android:layout_marginTop="16dp"/>
 </LinearLayout>
