Checkpoint 5: Removed Animation (Home -> Details)

--- a/app/src/main/res/navigation/mobile_nav.xml
+++ b/app/src/main/res/navigation/mobile_nav.xml
@@ -13,14 +13,15 @@
         android:label="Home"
         tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_home_to_cart"
+            android:id="@+id/action_home_to_productDetailFragment"
             app:destination="@id/productDetailFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="false"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right"
+            />
     </fragment>
 
     <!-- Product Detail -->
