--- a/app/src/main/res/layout/fragment_jual.xml
+++ b/app/src/main/res/layout/fragment_jual.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,43 +8,59 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/image_preview"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_product_placeholder"
+            android:background="#EEE"/>
+
+        <Button
+            android:id="@+id/btn_select_image"
+            android:text="Pilih Gambar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
+
         <EditText
             android:id="@+id/input_name"
             android:hint="Nama Produk"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/input_price"
-            android:hint="Harga Produk"
+            android:hint="Harga"
             android:inputType="number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/input_description"
+            android:hint="Deskripsi Produk"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <EditText
             android:id="@+id/input_stock"
             android:hint="Stok Produk"
             android:inputType="number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
+            android:layout_height="wrap_content"/>
 
-        <EditText
-            android:id="@+id/input_desc"
-            android:hint="Deskripsi Produk"
-            android:minLines="3"
-            android:gravity="top"
+        <Spinner
+            android:id="@+id/spinner_category"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/btn_add"
             android:text="Tambah Produk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@android:color/holo_purple" />
+            android:layout_marginTop="12dp"/>
+
     </LinearLayout>
 </ScrollView>
